--- a/.github/workflows/multiarch.yml
+++ b/.github/workflows/multiarch.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ${{ matrix.platform.runs-on }}
     strategy:
       matrix:
-        target:          
+        platform:          
           - os-name: Linux-x86_64
             runs-on: ubuntu-24.04
             target: x86_64-unknown-linux-musl
